use firebase admin env config

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ PORT=5000
 GEMINI_API_KEY=GEMINI_API_KEY
 FRONTEND_BASE_URL=http://localhost:5173
 FIREBASE_API_KEY=FIREBASE_API_KEY
+FIREBASE_PROJECT_ID=xxx
+FIREBASE_CLIENT_EMAIL=xxx
+FIREBASE_PRIVATE_KEY=xxx
